Updated Vercel routing for static site

--- a/vercel.json
+++ b/vercel.json
@@ -5,5 +5,8 @@
         "destination": "/e",
         "permanent": true
       }
+    ],
+    "routes": [
+      { "src": "/(.*)", "dest": "/index.html" }
     ]
-  }
+}
