--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,17 @@
 {
     "redirects": [
-      {
-        "source": "/",
-        "destination": "/e",
-        "permanent": true
-      }
+        {
+            "source": "/",
+            "destination": "/e",
+            "permanent": true
+        }
     ],
     "routes": [
-      { "src": "/(.*)", "dest": "/index.html" }
-    ]
+        { "src": "/(.*)", "dest": "/index.html" }
+    ],
+    "build": {
+        "env": {
+            "FRAMEWORK": "static"
+        }
+    }
 }
