Explicitly set output directory for static site

--- a/vercel.json
+++ b/vercel.json
@@ -2,16 +2,13 @@
     "redirects": [
         {
             "source": "/",
-            "destination": "/e",
+            "destination": "/index.html",
             "permanent": true
         }
     ],
     "routes": [
         { "src": "/(.*)", "dest": "/index.html" }
     ],
-    "build": {
-        "env": {
-            "FRAMEWORK": "static"
-        }
-    }
+    "outputDirectory": ".",
+    "framework": "static"
 }
