--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,8 @@
 {
-    "redirects": [
+    "rewrites": [
         {
             "source": "/",
-            "destination": "/e",
-            "permanent": true
+            "destination": "/index.html"
         }
-    ],
-    "outputDirectory": "."
+    ]
 }
